# Victauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  RELEASING.md  SECURITY-AUDIT.md  SECURITY.md  deny.toml  test_live.sh
.github/workflows/: ci.yml  compat.yml  release-npm.yml  release-vscode.yml  release.yml  surface-audit.yml
crates/victauri-browser/: Cargo.toml  README.md
crates/victauri-cli/: Cargo.toml  README.md
crates/victauri-core/: Cargo.toml
crates/victauri-plugin/: Cargo.toml  README.md
crates/victauri-test/: Cargo.toml  README.md
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  chrome-extension.md  compatibility.md  configuration.md  faq.md  getting-started.md  introduction.md  security.md  testing.md  tools-reference.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
examples/: agent-session.md
examples/demo-app/: Cargo.toml  README.md  tauri.conf.json  test_deep.sh
examples/demo-app/capabilities/: default.json
examples/demo-app/frontend/: index.html  notification.html
examples/demo-app/src/: main.rs
examples/demo-app/tests/: adversarial.rs  integration.rs
examples/gauntlet-app/: Cargo.toml
extensions/chrome/: content-isolated.js  content-main.js  manifest.json  mcp-config-example.json  service-worker.js
extensions/firefox/: content-isolated.js  content-main.js  manifest.json  service-worker.js
scripts/: bump-version.ps1  bump-version.sh  check-doc-counts.sh  preflight.ps1  preflight.sh
scripts/e2e/: README.md  (+5 more)
(+98 files in other folders)
