[package]
name = "demo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-window Tauri 2 app with Victauri — demonstrates full-stack testing patterns"
publish = false

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
victauri-plugin = { workspace = true }
victauri-core = { workspace = true }
tauri = { workspace = true, features = ["wry"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
victauri-test = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

[lints]
workspace = true
